tests/negative/typecheck/char.orng
// char.orng:5:23: error: expected a value of type `Bool`, got a value of type `Int`
// fn main() -> Bool {'d'}
//                      ^
// 
fn main() -> Bool {'d'}